# classement-stages

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: audit-grilles.md  campagne.md  verifier.md
classement/: __init__.py  __main__.py  budget.py  cli.py  costs.py  engine.py  excel_io.py  exports.py  grids.py  institutions.py  models.py  ranking.py
data/costs/: indemnites.json  zones.json
data/grids/: README.md  rc5-chercheurs-residences-manifestations.json  rc6-chercheurs-stages.json  rc7-personnel-administratif.json  rc8-techniciens-ingenierie.json  rc9-techniciens-developpement-technologique.json  shared-rules.json  u1-manifestations-internationales.json  u2-personnel-administratif.json  u3-residences-scientifiques.json  u4-perfectionnement.json
data/institutions/: _template.json  enset-skikda.json
docs/: audit-grilles.md  guide-deploiement-coolify.md  guide-excel.md  harness-claude-code.md  roadmap.md
examples/: candidats-u1.json  candidats-u2.json
examples/enset/: candidats-u4.json  dossiers-u4.xlsx  modele-u1.xlsx  modele-u2.xlsx  modele-u3.xlsx  modele-u4.xlsx
scripts/: audit_grids.py  consolider_declarations.py  fiches_declaration.py  import_odoo.py  make_example_xlsx.py
tests/: test_costs.py  test_engine.py  test_excel_io.py  test_institutions.py  test_ranking.py
tests/webapp/: conftest.py  test_admin.py  test_assemble.py  test_auth.py  (+6 more)
webapp/: __init__.py  auth.py  config.py  db.py  main.py  models.py  security.py  templating.py
(+31 files in other folders)
