[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "classement-stages"
version = "0.4.0"
description = "Moteur de classement des candidats à la mobilité à l'étranger (arrêté MESRS n° 345 du 09/03/2026)"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
webapp = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "bcrypt>=4.0",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["classement*", "webapp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
